# Capstone-design

./: .gitignore  README.md
catkin_ws_JETSON/: README.md
catkin_ws_JETSON/src/cnn_for_jetson/: CMakeLists.txt  Readme.md  package.xml
catkin_ws_JETSON/src/cnn_for_jetson/src/: catdog_cnn.py  catdog_cnn_network.py  onboard_camera_publisher.py  onboard_camera_subscriber.py  testimage_publisher.cpp
catkin_ws_JETSON/src/core_msgs/: CMakeLists.txt
catkin_ws_JETSON/src/core_msgs/msg/: ball_position.msg
catkin_ws_JETSON/src/dqn/src/: rl_dqn_network.py
catkin_ws_JETSON/src/readmarker/: CMakeLists.txt
catkin_ws_JETSON/src/readmarker/src/: readmarker.cpp.back
catkin_ws_NUC/: README.md
catkin_ws_NUC/src/aruco/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/aruco/src/: aruco.cpp
catkin_ws_NUC/src/ball_detection/: CMakeLists.txt
catkin_ws_NUC/src/ball_detection/src/: ball_detection_1.cpp  ball_detection_2.cpp
catkin_ws_NUC/src/cmd_sub/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/cmd_sub/launch/: cmd_sub_run.launch
catkin_ws_NUC/src/cmd_sub/src/: cmd_sub.cpp
catkin_ws_NUC/src/control/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/control/src/: control.1.cpp  control.cpp
catkin_ws_NUC/src/core_msgs/: CMakeLists.txt
catkin_ws_NUC/src/core_msgs/msg/: direction.msg  markerXY.msg
catkin_ws_NUC/src/dqn/: CMakeLists.txt  map_gen.yaml  package.xml
catkin_ws_NUC/src/dqn/src/: convert_sensor_to_image.cpp  dqn_model.py  rl_dqn_network.py
catkin_ws_NUC/src/find_frontier/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/find_frontier/config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml  planner.yaml.back
catkin_ws_NUC/src/find_frontier/launch/: hector_mapping.launch  move_base.launch  nav_run.launch
catkin_ws_NUC/src/find_frontier/src/: find_frontier.cpp
catkin_ws_NUC/src/m_robot_ws/m_robot_description/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/m_robot_ws/m_robot_description/launch/: m_robot_rviz.launch
catkin_ws_NUC/src/m_robot_ws/m_robot_description/urdf/: m_robot.gazebo  m_robot.xacro
catkin_ws_NUC/src/m_robot_ws/m_robot_gazebo/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/m_robot_ws/m_robot_gazebo/launch/: m_robot_world.launch
catkin_ws_NUC/src/m_robot_ws/m_robot_gazebo/worlds/: m_robot.world
catkin_ws_NUC/src/readmarker/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/readmarker/msg/: markermsg.msg
catkin_ws_NUC/src/readmarker/scripts/: target_cmd_pub.py
catkin_ws_NUC/src/readmarker/src/: CNN_test.py  readmarker.cpp  readmarker_python.py
catkin_ws_NUC/src/robot_launch/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/robot_launch/launch/: dqn_test.launch  nuc_launch.launch
catkin_ws_NUC/src/rplidar_ros/: README.md
catkin_ws_NUC/src/rplidar_ros/launch/: rplidar.launch
catkin_ws_NUC/src/rplidar_ros/rviz/: rplidar.rviz
catkin_ws_NUC/src/rplidar_ros/scripts/: create_udev_rules.sh
catkin_ws_NUC/src/rplidar_ros/src/: node.cpp
catkin_ws_NUC/src/tf_ball/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/tf_ball/src/: tf_ball.cpp
catkin_ws_NUC/src/tf_robot/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/tf_robot/src/: tf_robot.cpp
catkin_ws_NUC/src/webcam/: CMakeLists.txt  package.xml
catkin_ws_NUC/src/webcam/src/: webcam.cpp
catkin_ws_NUC/src/xbox_ctrl/: CMakeLists.txt  README.md  package.xml
catkin_ws_NUC/src/xbox_ctrl/src/: gamepad.c  xbox_control.cpp
dqn_learning_code/: .gitignore  Network_test.py  README.md  Rewarding strategies idea.txt  dqn_learn.py  dqn_model.py  learning review.txt  main.py  map_gen.yaml  simulator - no sort.py  simulator.py  temp_test.py
dqn_learning_code/blockdiagram/: learnig_dqn_network_algorithm.gliffy  simulator_algorithm.gliffy  test_dqn_network_algorithm.gliffy
labview_ws_myrio/: Captone BAM.aliases  Captone BAM.lvlps  Captone BAM.lvproj  README.md  UI_PC event.vi  ax position control test constant.vi  ax position control test.vi  ax12 position control.vi  ax12 position read.vi  ax12 position setting.vi  capstone1 ver 3.vi  capstone1 ver 4_mosfet.vi  capstone1 ver 4_temp&move code HW code.vi  capstone1 ver 4_temp&move code.vi  capstone1 ver 5.vi  capstone1 ver 6 backup.vi  capstone1 ver 6.vi  capstone1 ver final.vi  capstone2 ver 1.vi  capstone2 ver 2.vi  capstone2.vi  motor4 position control.vi  mx position control test constant.vi  mx position control test.vi  mx position torque control test.vi  mx speed control test.vi  temp calc.vi  test.vi  wheel mode.vi
labview_ws_myrio/Host sub vi/ctrl/: Host state.ctl
