<?xml version="1.0"?>
<package>
  <name>m_robot_description</name>
  <version>0.0.0</version>
  <description>The m_robot_description package</description>

  <maintainer email="chungdongha@kaist.ac.kr">chungdongha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
