<?xml version="1.0"?>
<package>
  <name>m_robot_gazebo</name>
  <version>0.0.0</version>
  <description>The m_robot_gazebo package</description>

  <maintainer email="chungdongha@todo.todo">chungdongha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>m_robot_control</run_depend>
  <run_depend>m_robot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
